--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Home</h1>
+    <ul>
+    {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
   </body>
 </html>
